# xsaitekpanels

./: .gitignore  .travis.yml  Copy_Source  LICENSE.txt  MakeMacOnLinux  Makefile_mac  ProjectHome.md  README.md  build-XP11-Xsaitekpanels_win_WithDocker_mac_lin_WithCmake_OnLinux  build-XP12-Xsaitekpanels_lin_WithDocker_win_mac_WithCmake_OnLinux  build-XP12-Xsaitekpanels_lin_win_mac_WithCmake_OnLinux  build-XP12-Xsaitekpanels_win_mac_lin_WithCmake_OnLinux  build4linux  build4mac  buildGithubXsaitekpanels  buildGithubXsaitekpanelsOnLinux  copy_Source  copy_Xsaitekpanels  indent-src  xsaitekpanels.ini
.github/workflows/: cmake.yml
Xsaitekpanels/: 51-Xsaitekpanels.rules  D2B_config.txt  D2B_config2.txt  D2B_config3.txt  Xsaitekpanels.pro  XsaitekpanelsUsersManaul.odt  bippanel.cpp  build4linux  build4mac  inireader.cpp  multidata.cpp  multipanel.cpp  radio1data.cpp  radiopanels.cpp  readinifile.cpp  saitekpanels.cpp  saitekpanels.h  switchdata.cpp  switchpanel.cpp  xsaitekpanels.ini
Xsaitekpanels/Documentation/: 51-Xsaitekpanels.rules  ChangeLog.txt  Xsaitekpanelsdatarefs.txt
Xsaitekpanels/lin_x64/: Xsaitekpanels.xpl
Xsaitekpanels/mac_x64/: Xsaitekpanels.xpl
Xsaitekpanels/plugin/: plugin.pro
Xsaitekpanels/plugin64/: plugin.pro
docker/: Dockerfile  Makefile  build.sh
docs/: ChangeLog.txt  Linux_Users_Please_Read.txt  XsaitekpanelsUsersManual.odt
hidapi-0.8.0-rc1_Patched/windows/: hid.c
plugin/: plugin.pro
plugin_lin_x64/: plugin.pro
src/: CMakeLists.txt  Command.cpp  Command.h  Dataref.cpp  Dataref.h  Log.cpp  Log.h  Toolchain-ubuntu-osxcross-11.3.cmake  bippanel.cpp  inireader.cpp  inireader.h  multidata.cpp  multipanel.cpp  multipanel.h  radio1data.cpp  radio2data.cpp  radio3data.cpp  radiopanels.cpp  readinifile.cpp  readinifile.h  saitekpanels.cpp  saitekpanels.h  switchdata.cpp  switchpanel.cpp  time.cpp  time.h
src/SDK/: README.txt
src/SDK/CHeaders/XPLM/: XPLMDefs.h  XPLMGraphics.h  XPLMInstance.h  XPLMScenery.h  XPLMWeather.h
src/SDK/Delphi/XPLM/: XPLMDefs.pas  XPLMGraphics.pas  XPLMInstance.pas  XPLMScenery.pas  XPLMWeather.pas
src/SDK/Libraries/Mac/XPLM.framework/Versions/C/: XPLM
src/SDK/Libraries/Mac/XPWidgets.framework/Versions/C/: XPWidgets
src/SDK/Libraries/Mac/XPWidgets.framework/Versions/C/Resources/: Info.plist
src/SDK/Libraries/Mac/XPWidgets.framework/Versions/C/_CodeSignature/: CodeResources
src/SDK/Libraries/Win/: XPLM_64.lib
trunk/Xsaitekpanels/: Xsaitekpanels.txt  bippanel.cpp  iniReader.c++  iniReader.h  inireader.h  multidata.cpp  multipanel.cpp  radio1data.cpp  radio2data.cpp  radiopanels.cpp  readinifile.cpp  saitekpanels.cpp  saitekpanels.h  switchdata.cpp  switchpanel.cpp  xsaitekpanels.ini
trunk/Xsaitekpanels/plugin/: plugin.pro
